packages/beff-core/tests/snapshots/frontend_v2__tests__qualified_access_via_named_import_object.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export const N = { A: \"a\" as const };\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { N } from \"./t\";\n                    type X = typeof N.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type X = "a";


type BuiltParsers = {
  X: X,
}
