packages/beff-core/tests/snapshots/frontend_v2__tests__qualified_access_via_named_reexport_of_namespace.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export const A = \"a\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    import * as N from \"./a\";\n                    export { N };\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { N } from \"./b\";\n                    type X = typeof N.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "a",
}
