packages/beff-core/tests/snapshots/frontend_v2__tests__qualified_type_from_default_import.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export type A = string;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    import * as N from \"./a\";\n                    export default N;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import N from \"./b\";\n                    type X = N.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type a_ts__A = string;

type entry_ts__X = a_ts__A;


type BuiltParsers = {
  X: entry_ts__X,
}
