packages/beff-core/tests/snapshots/frontend_v2__tests__re_export_default_as_default.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export default \"a\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export { default } from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import A from \"./b\";\n                    type X = typeof A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
--- a.ts ---
export default "a" as const;
--- b.ts ---
export { default } from "./a";
--- entry.ts ---
import A from "./b";
type X = typeof A;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = "a";


type BuiltParsers = {
  X: X,
}
