packages/beff-core/tests/snapshots/frontend_v2__tests__re_export_default_type_as_named.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    type A = \"a\";\n                    export default A;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export { default as A } from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A } from \"./b\";\n                    type X = A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type A = "a";

type X = A;


type BuiltParsers = {
  X: X,
}
