packages/beff-core/tests/snapshots/frontend_v2__tests__re_export_with_renaming.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export const A = \"a\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export { A as B } from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { B } from \"./b\";\n                    type X = typeof B;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type entry_ts__X = "a";


type BuiltParsers = {
  X: entry_ts__X,
}
