packages/beff-core/tests/snapshots/frontend_v2__tests__string_fmt_builtin.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"entry.ts\", from)])"
---
type X = StringFormat<"password">;


type BuiltParsers = {
  X: X,
}
